#![warn(rust_2018_idioms)]
#![warn(clippy::all)]
#![deny(warnings)]

[package]
name = "byron"
version = "0.1.0"
edition = "2024"

[dependencies]
memtable = { path = "./memtable" }
sstable = { path = "./sstable" }
tempfile = "3.19.1"
thiserror = "2.0.12"

[workspace]
members = [ "key_value", "lsm",
    "memtable", "sstable",
]

