#![warn(rust_2018_idioms)]
#![warn(clippy::all)]
#![deny(warnings)]
[package]
name = "byron"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "byron",
  "key_value",
  "lsm",
  "memtable",
  "sstable",
]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
lsm = {path = "./lsm"}


