[package]
name = "byron_server"
version = "0.1.0"
edition = "2024"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "byron"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "byron-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lsm = {path = "../lsm/"}
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "*"
