[package]
name = "lsm"
version = "0.1.0"
edition = "2024"

[dependencies]
key_value = {path = "../key_value"}
sstable = {path = "../sstable"}
memtable = {path = "../memtable"}
bloomfilter = "3"
thiserror = "2.0.12"

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
