[package]
name = "lsm"
version = "0.1.0"
edition = "2024"

[dependencies]
key_value = {path = "../key_value"}
sstable = {path = "../sstable"}
memtable = {path = "../memtable"}
bloomfilter = "3"
thiserror = "2.0.12"
tempfile = "3.19.1"
log = "0.4.27"
tokio = { version = "1.45.0", features = ["full"] }
rayon = "1.10.0"

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
